--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -36,7 +36,7 @@
 .about-innleft div {
   width: 30vw;
   height: 60vh;
-  background: url("./manwithlaptop.jpg");
+  background: url("https://images.unsplash.com/photo-1637782854502-90089987a8bb?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
   background-size: cover;
   background-position: center;
 }
