--- a/src/components/HeroSection/Hero.css
+++ b/src/components/HeroSection/Hero.css
@@ -13,7 +13,7 @@
   overflow: hidden; /* just in case */
 
   position: relative;
-}
+} 
 
 .hero-inndiv {
   border-top: 10px solid white;
@@ -38,6 +38,7 @@
   line-height: 1;
   color: white;
   text-decoration: underline;
+  
 }
 .first-head span {
   font-size: 5.5rem;
@@ -55,6 +56,7 @@
   margin-top: 5%;
 }
 .hero-inndiv div {
+  /* background: red; */
   display: flex;
   justify-content: end;
 }
@@ -100,7 +102,7 @@
 @media (max-width: 768px) {
   /* stack content center‑left instead of hard‑right */
   .hero-out {
-    height: 50vh;
+    height: 60vh;
   }
   .hero-inndiv {
     border-width: 6px;
@@ -128,20 +130,26 @@
 @media (max-width: 480px) {
   .hero-out {
     background-attachment: scroll;
-    height: 60vh;
+    height: 50vh;
   } /* disable parallax for mobile perf */
 
+  .hero-inndiv {
+    top: 33%;
+    left: 5%;
+    /* transform: translateX(-50%); */
+  }
   .first-head,
   .first-head:last-child {
-    font-size: 1.8rem;
+    font-size: 1.5rem;
     line-height: 1.1;
   }
   .first-head span {
-    font-size: 2.2rem;
+    font-size: 2rem;
   }
 
   .second-head {
     font-size: 1rem;
     padding: 12px 16px;
+    margin-right: -15%;
   }
 }
