--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -48,7 +48,7 @@
 
 .about-innright {
   width: 40%;
-  height: 50vh;
+  height: 60vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -59,8 +59,9 @@
 }
 
 .about-innright h1 {
+  /* background: red; */
   font-size: 1.5rem;
-  padding: 50px;
+  padding: 10px 50px;
   color: rgb(82, 81, 81);
 }
 
@@ -87,6 +88,27 @@
 
 .about-innright button svg {
   margin-left: 1%;
+}
+.about-innright div{
+  /* border: 2px solid gray; */
+  width: 60%;
+  border-radius: 10px;
+  background: black;
+  flex-direction: column;
+  display: flex;
+  padding: 10px;
+  margin: 10px;
+  justify-content: start;
+  align-items: center;
+  margin-bottom: 6%;
+  color: white;
+}
+.clientnum{
+  font-size: 1.4rem;
+  /* background: red; */
+}
+.clientnum2{
+  font-size: 1.2rem;
 }
 
 /* ───────────── Desktop → 1240 px ───────────── */
@@ -119,6 +141,20 @@
     .about-innleft div{ height: 38vh; }
   
     .about-innright   { padding: 25px 4%;  }
+    .about-innright div{
+      /* border: 2px solid gray; */
+      width: 80%;
+     
+    }
+    .clientnum{
+      font-size: 1.4rem;
+      text-align: center;
+      margin-bottom: 4%;
+      /* background: red; */
+    }
+    .clientnum2{
+      font-size: 1.5rem;
+    }
     .about-innright h1{ font-size: 1.1rem; padding: 20px 0; }
     .about-innright button{ width: 90%; font-size: 1.1rem; }
   }
@@ -133,6 +169,20 @@
     .about-inn        { padding: 16px 4%; }
   
     .about-innleft div{ height: 32vh; }
+    .about-innright div{
+      /* border: 2px solid gray; */
+      width: 80%;
+    
+    }
+    .clientnum{
+      font-size: 1rem;
+      text-align: center;
+      margin-bottom: 2%;
+      /* background: red; */
+    }
+    .clientnum2{
+      font-size: 1.2rem;
+    }
   
     .about-innright   { padding: 20px 4%; gap:2% }
     .about-innright h1{ font-size: 1rem; padding: 16px 0; }
