--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,22 @@ body{
   font-family: "Poppings" , sans-serif;
   overflow-x: hidden;
 }
+
+::-webkit-scrollbar {
+  width: 5px;
+  /* height: 5px; */
+  /* background-color: var(--basic-color); */
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: black;
+  border-radius: 20px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: white;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
