--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,19 @@
     height: 100vh;
     position: relative;
 }
+
+.conForm{
+    display: none;
+    justify-content: center;align-items: center;
+    top: 50%;
+    transform: translateY(-50%);
+    z-index:999;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(198, 197, 197, 0.5);
+    position: absolute;
+}
+
+.overlayForm{
+    overflow-y: hidden;
+}
