--- a/src/components/Client/Client.css
+++ b/src/components/Client/Client.css
@@ -113,7 +113,7 @@
 @media (max-width: 480px) {
   .client-outdiv {
     padding: 10px;
-    margin-top: 5%;
+    /* margin-top: 5%; */
     gap: 5%;
     height: 90vh;
   }
